# proxmox-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_router_integration.py
.github/workflows/: lint.yml  security.yml  test.yml
fine-tuning/: Dockerfile  README.md  download_model.py  evaluate.py  fine_tune.py  generate_training_data.py  pipeline.py  requirements.txt  run.sh
fine-tuning/data/: val.json
src/proxmox_mcp/: client.py  router.py  server.py
src/proxmox_mcp/tools/: access.py  backup.py  cluster.py  firewall.py  ha.py  lxc.py  nodes.py  pools.py  qemu.py  sdn.py  storage.py
tests/: conftest.py  test_client.py  test_management_tools.py  test_node_tools.py  test_server.py  test_vm_tools.py
